# defining-acceptance

./: .pre-commit-config.yaml  README.md  index.html  pyproject.toml  testbed.yaml  testbed.yaml.example
.github/workflows/: acceptance-tests.yml  lint.yml  unit-tests.yml
6/: index.html
6/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
6/data/test-cases/: 10def56cdceffd38.json  16d567f3323798ce.json  1c4b444e4dab1ab.json  1eb4d8c2e967157e.json  1ec94e96ede0cf8d.json  223cc85518f9eeb8.json  22585db43a16707e.json  22974b773c331e3f.json  2d000035398c0ccf.json  2d924a93be688e55.json  2ded03ef998a314b.json  2e480240277f4fef.json  2eecc6210a4fda08.json  2faccf5cf9e57c0a.json  3205329b310736a2.json  3240fba9a6c64aaa.json  340bdbf1c4fcbf13.json  34604f5b48dd0661.json  352f9f9d679f0274.json  390dbe969a7230c1.json  3b273725ee731976.json  3b49d2704642a2e2.json  3b6e68706daca2bd.json  3fd700bdadc8b7b3.json  4323608e846a70b3.json  45cb1788c012a464.json  45f756c076ca0bb9.json  46791aff1f1ba08a.json  4cac9812ed1e4c9a.json  52ff6b3a1509b067.json  546c38e5b24dda17.json  56faf7f1a923ee89.json  5973cc096d99df7c.json  5992ddc99376cc8a.json  5a62e16c31553b3b.json  5df1dcd5c6c60170.json  5e57e73fd8dc0ece.json  5f2168d6bf94529e.json  6050b6baeea27348.json  61b0af4febc9c33a.json  (+80 more)
6/export/: influxDbData.txt  prometheusData.txt
6/history/: history.json
6/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
docs/: architecture.md
features/operations/: deployments.feature
features/performance/: network_throughput.feature
features/provisioning/: external-juju.feature  maas.feature  manual-bare-metal.feature
features/reliability/: network_resilience.feature  storage_availability.feature  vm_availability.feature
features/security/: access_control.feature  data_encryption.feature  network_isolation.feature
src/defining_acceptance/: __init__.py  collect_logs.py  deferred_upload.py  observer.py  reporting.py  testbed.py  utils.py
src/defining_acceptance/clients/: __init__.py  credentials.py  openstack.py  ssh.py  sunbeam.py
src/defining_acceptance/clients/test_observer_client/api/reports/: get_test_execution_reports_v1_reports_test_executions_get.py  get_testresults_report_v1_reports_test_results_get.py
src/defining_acceptance/provision_cloud/: __init__.py
tests/: _vm_helpers.py  conftest.py
tests/bdd/: _vm_helpers.py  conftest.py
tests/bdd/step_defs/functional/: test_external_juju.py  test_maas.py  test_manual_bare_metal.py
tests/bdd/step_defs/reliability/: test_storage_availability.py  test_vm_availability.py
tests/bdd/step_defs/security/: test_data_encryption_external.py  test_data_encryption_internal.py  test_network_isolation_restricted.py
tests/step_defs/functional/: conftest.py  test_external_juju.py  test_feature_deployment.py  test_maas.py  test_manual_bare_metal.py
tests/step_defs/operations/: conftest.py  test_feature_deployment.py
tests/step_defs/performance/network_throughput/: conftest.py  test_external.py  test_internal_different_host.py  test_internal_same_host.py
tests/step_defs/provisioning/: test_manual_bare_metal.py
tests/step_defs/reliability/: conftest.py  test_network_resilience.py  test_storage_availability.py  test_vm_availability.py
tests/step_defs/security/: conftest.py  test_access_control.py  test_data_encryption_external.py  test_data_encryption_internal.py  test_network_isolation_proxy.py  test_network_isolation_restricted.py
tests/unit/: test_collect_logs.py  test_reporting.py  test_ssh_types.py  test_sunbeam_client.py  test_testbed.py  test_utils.py
