[project]
name = "defining-acceptance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guillaume Boutry", email = "guillaume.boutry@canonical.com" },
]
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.15.3",
    "paramiko>=3.5.1",
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
allure-report = "defining_acceptance:generate_allure_report"
allure-serve = "defining_acceptance:serve_allure_report"
allure-clean = "defining_acceptance:clean_allure_reports"
to-upload = "defining_acceptance.deferred_upload:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest]
bdd_features_base_dir = "features/"
addopts = [
    "--alluredir=reports/allure-results",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--capture=no",
    "--ignore=src/"
]
markers = [
    # Test suite markers
    "security: marks tests as part of the security suite",
    "reliability: marks tests as part of the reliability suite",
    "operations: marks tests as part of the operations suite",
    "performance: marks tests as part of the performance suite",
    "provisioning: marks tests as part of the provisioning suite",
    # Deployment topology / provider markers
    "maas: marks tests that require MAAS infrastructure",
    "single_node: marks tests for single-node deployment",
    "single-node: marks tests for single-node deployment (gherkin alias)",
    "multi_node: marks tests for multi-node deployment",
    "multi-node: marks tests for multi-node deployment (gherkin alias)",
    "external_juju: marks tests that require external Juju controller",
    "external-juju: marks tests that require external Juju controller (gherkin alias)",
    "three_node: marks tests that require 3+ node deployment",
    "three-node: marks tests that require 3+ node deployment (gherkin alias)",
    "proxy: marks tests that require proxy environment",
    # Feature markers
    "secrets: marks tests that require the secrets feature",
    "caas: marks tests that require the CaaS feature",
    "loadbalancer: marks tests that require the load balancer feature",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
to = [
    "attrs>=22.2.0",
    "httpx>=0.23.0,<0.29.0",
    "python-dateutil~=2.8.0",
]
